# stde.pegen

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  dev_requirements.txt  doc.md  pyproject.toml  run_mypy.py  tox.ini  vscode-tasks.json
badges/: README.md
data/: expr2.gram  expr3.gram  isolated.gram  python.gram  python_v2.gram
docs/: Makefile  conf.py  grammar.rst  grammar_1.txt  guide.rst  index.rst  peg_parsers.rst  subexpressions.gv
scripts/: ast_timings.py  find_max_nesting.py  generate_parser.py  grammar_grapher.py  grammar_grapher_2.py  grammar_searcher.py  show_parse.py  test_parse_directory.py  test_pypi_packages.py
src/_typings_mypy/: build_typings.py  build_typings_v2.py
src/_typings_not_mypy/: build_typings.py  build_typings_v2.py
src/pegen/: __main__.py  build.py  build2.py  build_stubs.py  build_types.py  build_types_v2.py  build_typing.py  build_typings_not_mypy.py  build_v2.py  common.py  first_sets.py  grammar.py  grammar_parser.py  grammar_parser_v2.py  grammar_v2.py  grammar_visualizer.py  grammar_visualizer_v2.py  metagrammar.gram  metagrammar_v2.gram  parser.py  parser_generator.py  parser_generator_v2.py  parser_v2.py  parser_v2_old.py  python_generator.py  python_generator_v2.py  tokenizer.py  utils.py  utils2.py  utils_v2.py  validator.py  validator_v2.py  web.py
src/stde/: __init__.pyi
src/stde/pegen/: __init__.py  __main__.py  build.py  build_v2.py  common.py  first_sets.py  grammar.py  grammar_parser.py  grammar_parser_v2.py  grammar_v2.py  grammar_visualizer.py  grammar_visualizer_v2.py  metagrammar.gram  metagrammar_v2.gram  parser.py  parser_generator.py  parser_generator_v2.py  parser_v2.py  parser_v2_old.py  python_generator.py  python_generator_v2.py  sccutils.py  tokenizer.py  utils.py  utils2.py  utils_v2.py  validator.py  validator_v2.py  web.py
src/stde/pegen/legacy/: build.py  first_sets.py  grammar.py  grammar_parser.py  grammar_visualizer.py  metagrammar.gram  parser.py  parser_generator.py  python_generator.py  utils.py  validator.py  web.py
src/stde/pegen/templates/: index.html
src/stde/pegen/v2/: build.py  grammar.py  grammar_parser.py  grammar_visualizer.py  metagrammar.gram  parser.py  parser_generator.py  parser_old.py  python_generator.py  validator.py
tests/: __init__.py  test_grammar_validator.py  test_grammar_visitor.py  test_grammar_visualizer.py  test_pegen.py
tests/legacy/: test_first_sets.py  test_grammar_validator.py  test_grammar_visitor.py  test_grammar_visualizer.py  test_pegen.py  test_tokenizer.py
tests/python_parser/: conftest.py  test_unsupported_syntax.py
tests/v2/: test_char_based.py  test_default_parser.py  test_grammar_validator.py  test_grammar_visitor.py  test_grammar_visualizer.py  test_one_or_more_bug.py  test_pegen.py  test_v2.py  test_zero_or_more_bug.py
tests/v2/doc_tests/: test_guide.py
tests/v2/python_parser/: conftest.py  test_syntax_error_handling.py
